--- a/chat/templates/chat.html
+++ b/chat/templates/chat.html
@@ -1,8 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>chat</title>
+    <title>Chat</title>
 </head>
 <body>
 Let's chat (from template)
